fix navigation small bug

--- a/week6/css/mainRaymond.css
+++ b/week6/css/mainRaymond.css
@@ -14,6 +14,83 @@
 	border-radius: 1%;
 	/*background-color: rgb(67, 198, 232);*/
 }
+body{
+	margin: 0;
+	padding-top: 2rem;
+	margin-left: 2%;
+
+	background: url("../img/8.jpg");
+	background-repeat: no-repeat;
+	background-position:top; 
+	background-size: 100% 12rem;
+	/*background-color: rgb(203, 243, 239);*/
+	background-color: rgb(36, 18, 76);
+
+}
+nav{
+	font-size: 1.5rem;
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+	font-weight: bold;
+	
+}
+nav a{
+
+	color: rgb(0,0,0);
+	text-decoration: none;
+	padding: .5rem ;
+	background-color: rgb(67, 220, 232);
+	transition: background-color .5s;
+
+
+
+}
+nav a:hover, nav a:focus{
+	/*border: 1px solid black;*/
+	color: rgb(85,84,199);
+	background-color: rgb(67, 198, 232);
+}
+
+.nav-main-item{
+		position: relative;
+		top:4.5rem;
+
+		background-color: rgb(67, 198, 232);
+		left:-4%; 
+		padding-left: 6%;
+		padding-right: 0;
+		/*padding: 1rem 1rem 7% 3&&;*/
+		width: 104%;
+}
+
+form{
+	position: absolute;
+	top: 6rem;
+	right: 1rem;
+
+}
+input{
+	width: 10rem;
+
+	font-size: 1.25rem;
+	background: url("../img/search.png");
+	background-repeat: no-repeat;
+	background-position: 1% 1%;
+	background-size: auto 100%;
+	text-indent: 20%;
+	background-color: white;
+}
+
+h1{
+	color: black;
+	margin: 0;
+	padding-left: 2.5rem;	
+	font-size: 3rem;
+	font-family: titlefont;
+
+}
+
 
 h2{
 	position: relative;
@@ -28,20 +105,6 @@ h2{
 	width: 33%
 }
 
-p{
-	padding: 0;
-	margin: 0;
-
-}
-
-.eventp{
-	padding-top: 1rem;
-	position: relative;
-	left: -32%;
-	top: 8rem;
-	color: rgb(235,235,235);
-}
-
 h3{ 
 	display: inline-block;
 	margin: 0;
@@ -51,6 +114,28 @@ h3{
 
 	
  }
+
+p{
+	padding: 0;
+	margin: 0;
+
+}
+
+
+
+/* event block specific css*/
+/**/
+/**/
+/**/
+.eventp{
+	padding-top: 1rem;
+	position: relative;
+	left: -32%;
+	top: 8rem;
+	color: rgb(235,235,235);
+}
+
+
  .eventh3{
  	padding-top: 5%;
 	position: relative;
@@ -65,7 +150,19 @@ h3{
 	top: -1.1rem;
 	opacity: .8;
 	color: blue;
+	margin-left: 1%;
+	font-size: .75rem;
  }
+ .eventimg{
+	width: 100%;
+	opacity: .9;
+}
+
+.eventfigure{
+	padding:0;
+	margin: 1%;
+}
+
 
  /*set responsive for te h3 and p in event first block*/
  @media(max-width: 90rem){
@@ -113,18 +210,24 @@ h3{
  }
 
 
+/* here is where te screen turn into one pcolumn*/
+ @media (max-width: 44rem) {
 
-
-
-
-.eventimg{
-	width: 100%;
-	opacity: .9;
-}
-
-.eventfigure{
-	padding:0;
-	margin: 1%;
+ 	body{
+ 		margin: 2%;
+ 	}
+ 	.eventh3{
+ 		position: static;
+ 		font-size: 2.5rem;
+ 		padding-top: 2%;
+ 	}
+ 	.eventp{
+ 		position: static;
+ 		font-size: 1rem;
+ 	}
+ 	.nav-main-item{
+ 		width: 106%;
+ 	}
 }
 
 @media (max-width: 44rem) {
@@ -139,90 +242,7 @@ h3{
 
 
 
-.eventfigcap{
-	margin-left: 1%;
-	font-size: .75rem;
-
-}
-
-
-nav{
-	font-size: 1.5rem;
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
-	font-weight: bold;
-	
-}
-nav a{
-
-	color: rgb(0,0,0);
-	text-decoration: none;
-	padding: .5rem ;
-	background-color: rgb(67, 220, 232);
-	transition: background-color .5s;
-
-
-
-}
-nav a:hover, nav a:focus{
-	/*border: 1px solid black;*/
-	color: rgb(85,84,199);
-	background-color: rgb(67, 198, 232);
-}
-body{
-	margin: 0;
-	padding-top: 2rem;
-	margin-left: 2%;
-
-	background: url("../img/8.jpg");
-	background-repeat: no-repeat;
-	background-position:top; 
-	background-size: 100% 12rem;
-	/*background-color: rgb(203, 243, 239);*/
-	background-color: rgb(36, 18, 76);
-
-}
-
-form{
-	position: absolute;
-	top: 6rem;
-	right: 1rem;
-
-}
-input{
-	width: 10rem;
-
-	font-size: 1.25rem;
-	background: url("../img/search.png");
-	background-repeat: no-repeat;
-	background-position: 1% 1%;
-	background-size: auto 100%;
-	text-indent: 20%;
-	background-color: white;
-}
-h1{
-	color: black;
-	margin: 0;
-	padding-left: 2.5rem;	
-	font-size: 3rem;
-	font-family: titlefont;
-
-}
-
-
-.nav-main-item{
-		position: relative;
-		top:4.5rem;
-
-		background-color: rgb(67, 198, 232);
-		left:-4%; 
-		padding-left: 6%;
-		padding-right: 0;
-		/*padding: 1rem 1rem 7% 3&&;*/
-		width: 104%;
-}
-
+/*navigation backgroudn imag responsive*/
 @media(max-width: 60rem){
 	body{
 		background: url("../img/8.jpg");
@@ -365,10 +385,3 @@ h1{
 }
 
 
-	
-
-/*@media(max-width: 24rem){
-	.grid-3of24{
-		width: 50%;
-	}
-}*/
